feature: add rating & update payment
