# controllers/payment.controller.js
@@ -1,12 +1,27 @@
 const { VSCreatePayment } = require("../libs/validation/payment");
-const { createPaymentService } = require("../services/payment");
+const {
+  createPaymentService,
+  updatePaymentService,
+  deletePaymentService,
+} = require("../services/payment");
+const { findFirstPayment, queryPaymentById } = require("../utils/helpers/payment");
 
 const createPayment = async (req, res, next) => {
   try {
-    const { payment_method, class_id, user_id } = req.body;
+    const user = req.user;
+    const { payment_method, class_id } = req.body;
     VSCreatePayment.parse(req.body);
 
-    const newPayment = await createPaymentService(payment_method, class_id, user_id);
+    const existingPayment = await findFirstPayment(class_id, user?.id);
+
+    if (existingPayment) {
+      return res.status(400).json({
+        message: "Bad Request",
+        error: "Pembayaran sudah ada, silahkan membeli kelas lain",
+      });
+    }
+
+    const newPayment = await createPaymentService(payment_method, class_id, user?.id);
 
     return res.status(200).json({
       message: "Pembayaran berhasil dibuat",
@@ -17,6 +32,67 @@ const createPayment = async (req, res, next) => {
   }
 };
 
+const updatePayment = async (req, res, next) => {
+  try {
+    const user = req.user;
+    const { class_id } = req.params;
+
+    await updatePaymentService(class_id, user?.payments);
+
+    return res.status(200).json({
+      message: "Pembayaran berhasil diupdate",
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+const getPaymentById = async (req, res, next) => {
+  try {
+    const { id } = req.params;
+
+    const payment = await queryPaymentById(id);
+
+    if (!payment) {
+      return res.status(404).json({
+        message: "Data pembayaran tidak ditemukan",
+      });
+    }
+
+    return res.status(200).json({
+      message: "Data pembayaran ditemukan",
+      data: payment,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+const deletePayment = async (req, res, next) => {
+  try {
+    const { id } = req.params;
+
+    const existingPayment = await queryPaymentById(id);
+    if (!existingPayment) {
+      return res.status(404).json({
+        message: "Data pembayaran tidak ditemukan",
+      });
+    }
+
+    const payment = await deletePaymentService(id);
+
+    return res.status(200).json({
+      message: "Pembayaran berhasil di hapus",
+      data: payment,
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
 module.exports = {
   createPayment,
+  updatePayment,
+  getPaymentById,
+  deletePayment,
 };
