# routes/index.js
@@ -4,6 +4,7 @@ const user = require("./user");
 const profile = require("./profile");
 const general = require("./general");
 const course = require("./class");
+const payment = require("./payment");
 
 const router = Router();
 
@@ -19,5 +20,6 @@ router.use("/users", user);
 router.use("/profiles", profile);
 router.use("/general", general);
 router.use("/classes", course);
+router.use("/payments", payment);
 
 module.exports = router;
