# routes/payment.js
@@ -1,7 +1,16 @@
 const { Router } = require("express");
-const { createPayment } = require("../controllers/payment.controller");
+const {
+  createPayment,
+  updatePayment,
+  getPaymentById,
+  deletePayment,
+} = require("../controllers/payment.controller");
+const { authorizationHeader } = require("../middlewares/auth");
 const payment = Router();
 
-payment.post("/", createPayment);
+payment.post("/", authorizationHeader, createPayment);
+payment.get("/paid/:class_id", authorizationHeader, updatePayment);
+payment.get("/:id", authorizationHeader, getPaymentById);
+payment.delete("/:id", authorizationHeader, deletePayment);
 
 module.exports = payment;
